syntax = "proto3";

package type_optional;

option go_package = "xgo/tests/pb/pbbases";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "tests/proto/cases/bases/private.proto";

import "proto/json.proto";

// EnumOptional1 used tests cases in this file.
enum EnumOptional1 {
  Zero  = 0;
  One   = 2;
  Two   = 3;
  Three = 5;
  Four  = 6;
  Five  = 7;
  Six   = 9;
  Seven = 11;
  Eight = 12;
  Nine  = 15;
  Ten   = 17;
}

// MessageOptional1 used tests cases in this file.
message MessageOptional1 {
  message Embed1 {
    message Embed2 {
      string f_string1 = 1 [ (json.field) = { } ];
      string f_string2 = 2 [ (json.field) = { } ];
      string f_string3 = 3 [ (json.field) = { } ];
    }
    string f_string1 = 1 [ (json.field) = { } ];
    string f_string2 = 2 [ (json.field) = { } ];
    string f_string3 = 3 [ (json.field) = { } ];
  }
  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}

// Test case for field Optional.
message TypeOptional1 {
  optional string f_string1 = 1 [ (json.field) = { } ];
  optional string f_string2 = 2 [ (json.field) = { } ];

  optional int32    f_int32    = 11 [ (json.field) = { } ];
  optional int64    f_int64    = 12 [ (json.field) = { } ];
  optional uint32   f_uint32   = 13 [ (json.field) = { } ];
  optional uint64   f_uint64   = 14 [ (json.field) = { } ];
  optional sint32   f_sint32   = 15 [ (json.field) = { } ];
  optional sint64   f_sint64   = 16 [ (json.field) = { } ];
  optional sfixed32 f_sfixed32 = 17 [ (json.field) = { } ];
  optional sfixed64 f_sfixed64 = 18 [ (json.field) = { } ];
  optional fixed32  f_fixed32  = 19 [ (json.field) = { } ];
  optional fixed64  f_fixed64  = 20 [ (json.field) = { } ];
  optional float    f_float    = 21 [ (json.field) = { } ];
  optional double   f_double   = 22 [ (json.field) = { } ];

  optional bool f_bool1 = 31 [ (json.field) = { } ];

  optional bytes f_bytes1 = 32 [ (json.field) = { } ];

  optional EnumOptional1                f_enum1 = 51 [ (json.field) = { } ];
  optional external.Enum1               f_enum2 = 52 [ (json.field) = { } ];
  optional external.Embed.Enum1         f_enum3 = 53 [ (json.field) = { } ];
  optional external.Embed.Message.Enum1 f_enum4 = 54 [ (json.field) = { } ];
  optional private.EnumCommon1          f_enum5 = 55 [ (json.field) = { } ];
  optional private.MessageCommon1.Enum1 f_enum6 = 56 [ (json.field) = { } ];

  optional google.protobuf.Duration f_duration1 = 61 [ (json.field) = { } ];
  optional google.protobuf.Duration f_duration2 = 62 [ (json.field) = { } ];

  optional google.protobuf.Timestamp f_timestamp1 = 63 [ (json.field) = { } ];
  optional google.protobuf.Timestamp f_timestamp2 = 64 [ (json.field) = { } ];

  optional google.protobuf.Any f_any1 = 65 [ (json.field) = { } ];
  optional google.protobuf.Any f_any2 = 66 [ (json.field) = { } ];

  optional MessageOptional1                     f_message1 = 71 [ (json.field) = { } ];
  optional MessageOptional1.Embed1              f_message2 = 72 [ (json.field) = { } ];
  optional MessageOptional1.Embed1.Embed2       f_message3 = 73 [ (json.field) = { } ];
  optional external.Message1                    f_message4 = 74 [ (json.field) = { } ];
  optional external.Message1.Embed1             f_message5 = 75 [ (json.field) = { } ];
  optional external.Message1.Embed1.Embed2      f_message6 = 76 [ (json.field) = { } ];
  optional private.MessageCommon1               f_message7 = 77 [ (json.field) = { } ];
  optional private.MessageCommon1.Embed1        f_message8 = 78 [ (json.field) = { } ];
  optional private.MessageCommon1.Embed1.Embed2 f_message9 = 79 [ (json.field) = { } ];
}

